2012-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/fit.c src/plot2d.c src/plot3d.c:
	Merge parse_range() and parse_named_range() into a single routine.
	Clean up the code and the call sites.

2012-11-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_color_name) share/gnuplotrc:  If the expression in
	`linecolor rgb <expression>` is not interpretable as a color name or 
	hexadecimal string "#RRGGBB" then treat it as an integer representing
	AARRGGBB.  Provide examples in gnuplotrc of user-defined functions to
	map RGB or HSV colors using the [0:1] range onto gnuplot's AARRGGBB
	hexadecimal string notation.

2012-11-08  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c:  Revise placement of the %n format used to read from
	the input stream. This avoids an ambiguity in the standard for treating
	spaces immediately preceding %n.

2012-11-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Axis tic labels provided by the user as string
	constants were arbitrarily truncated to MAX_ID_LEN before printing.
	No truncation is necessary.
	Bug #3585182

	* src/axis.c (setup_tics) src/plot2d.c (eval_plots):
	Enable auto-scaling for data sets plotted using the secondary axis
	of a linked axis pair.  E.g.   set link y; plot FOO axes x1y2

	* src/set.c (set_encoding):  Fix memory leak.

2012-11-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf): Ever since the gprintf routine was added
	(sometime before version 3.7) the count parameter that should limit how
	many characters are written on output has been silently ignored.
	Obviously this can lead to buffer overflows, the simplest case being a
	format consisting of a string constant with length > MAX_ID_LEN.
	Revise gprintf() to use snprintf() and safe_strncpy() throughout.
	Bug #3577439

2012-11-03  Clement Law  <themanifold@gmail.com>

	* src/pm3d.c src/pm3d.h src/save.c src/set.c src/show.c: